# textorium-tui

./: CLAUDE.md  Cargo.toml  LICENSE  PRODUCT.md  README.md  ROADMAP.md  TODO.md  paulos.project.toml
.claude/: agents  personas  skills
.github/workflows/: release.yml
src/: cli.rs  main.rs
src/core/: config.rs  mod.rs  posts.rs
src/tui/: app.rs
src/widgets/: mod.rs
work-log/: 2026-02-06.md  2026-02-09.md  2026-02-15.md
