[package]
name = "textorium"
version = "0.1.0"
edition = "2021"
authors = ["Paul Shortino <paul@synaxis.co>"]
description = "A fast terminal interface for static site generators"
license = "MIT"
repository = "https://github.com/pwelty/textorium-tui"

[[bin]]
name = "textorium"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"

# File system and paths
walkdir = "2.5"
glob = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (for file watching, future features)
tokio = { version = "1.40", features = ["full"] }

# String utilities
regex = "1.11"

# Config and storage
directories = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
